@@ -167,8 +167,8 @@ class SimpleLxcNode(PyCoreNode):
             if ifname is None:
                 ifname = "eth%d" % ifindex
             sessionid = self.session.shortsessionid()
-            name = "n%s.%s.%s" % (self.objid, ifindex, sessionid)
-            localname = "n%s.%s.%s" % (self.objid, ifname, sessionid)
+            name = "veth%s.%s.1.%s" % (self.objid, ifindex, sessionid)
+            localname = "veth%s.%s.%s" % (self.objid, ifindex, sessionid)
             if len(ifname) > 16:
                 raise ValueError, "interface local name '%s' to long" % \
                         localname
@@ -198,7 +198,7 @@ class SimpleLxcNode(PyCoreNode):
             if ifname is None:
                 ifname = "eth%d" % ifindex
             sessionid = self.session.shortsessionid()
-            localname = "n%s.%s.%s" % (self.objid, ifindex, sessionid)
+            localname = "tap%s.%s.%s" % (self.objid, ifindex, sessionid)
             name = ifname
             ifclass = TunTap
             tuntap = ifclass(node = self, name = name, localname = localname,
